# VulkanContext

./: CMakeLists.txt  README.md  nbactions.xml  pom.xml
src/: main.cpp
src/cxx/: implementation.cpp
src/cxx/Util/: ShaderConfParser.cpp  ShaderConfParser.h  ShaderLoader.cpp  ShaderLoader.h  StringUtil.cpp  StringUtil.h
src/cxx/Vulkan/: VulkanEndRenderPipeline.cpp  VulkanEndRenderPipeline.h  VulkanInstance.cpp  VulkanInstance.h  VulkanSwapChain.cpp  VulkanSwapChain.h
src/cxx/Vulkan/ImGUIVulkan/: ImGUIVulkan.cpp  ImGUIVulkan.h
src/cxx/Vulkan/VulkanBuffers/: IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h
src/cxx/Vulkan/VulkanComputePipeline/: ComputePipelineConfigurer.cpp  ComputePipelineConfigurer.h  ComputePipelineEndConfig.h  VulkanComputePipeline.cpp  VulkanComputePipeline.h
src/cxx/Vulkan/VulkanDescriptors/: IDescriptorObject.h  VulkanDescriptorSet.cpp  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanDescritptorSet.h
src/cxx/Vulkan/VulkanDevice/: DeviceSuitability.cpp  DeviceSuitability.h  VulkanDevice.cpp  VulkanDevice.h
src/cxx/Vulkan/VulkanGraphicsPipeline/: GraphicsPipelineConfigurer.cpp  GraphicsPipelineConfigurer.h  PipelineEndConfiguration.h  PipelineImmediateConfig.cpp  PipelineImmediateConfig.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h
src/cxx/Vulkan/VulkanGraphicsPipeline/VulkanShader/: VulkanShader.cpp  VulkanShader.h
src/cxx/Vulkan/VulkanImage/: VulkanCubemapImage.cpp  VulkanCubemapImage.h  VulkanImage.cpp  VulkanImage.h
src/cxx/Vulkan/VulkanImmediateShaderData/PushConstants/: VulkanPushConstant.cpp  VulkanPushConstant.h  VulkanPushConstantManager.cpp  VulkanPushConstantManager.h
src/cxx/Vulkan/VulkanImmediateShaderData/StorageBuffer/: VulkanStorageBuffer.cpp  VulkanStorageBuffer.h
src/cxx/Vulkan/VulkanImmediateShaderData/UniformBuffers/: VulkanUniformBuffer.cpp  VulkanUniformBuffer.h
src/cxx/Vulkan/VulkanImmediateShaderData/VulkanSampler/: VulkanSampler.cpp  VulkanSampler.h
src/cxx/Vulkan/VulkanLogger/: DefaultVulkanLoggerCallback.cpp  DefaultVulkanLoggerCallback.h  IVulkanLoggerCallback.h  VulkanLogger.cpp  VulkanLogger.h
src/cxx/Vulkan/VulkanRenderingPipeline/: VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderPipelineControl.cpp  VulkanRenderPipelineControl.h  VulkanRenderingPipeline.cpp  VulkanRenderingPipeline.h
src/cxx/Vulkan/VulkanShader/: VulkanShader.cpp  VulkanShader.h
src/cxx/Vulkan/VulkanSync/: VulkanOneFrameSync.cpp  VulkanOneFrameSync.h  VulkanSyncManager.cpp  VulkanSyncManager.h  VulkanThreeFrameSync.cpp  VulkanThreeFrameSync.h
src/cxx/VulkanContext/Exceptions/: BuilderNotPopulatedException.cpp  BuilderNotPopulatedException.h  NotSupportedExtensionException.cpp  NotSupportedExtensionException.h  NotSupportedLayerException.cpp  NotSupportedLayerException.h
src/cxx/VulkanContext/MemoryUtils/: IDestroyableObject.h
src/cxx/VulkanContext/Vulkan/: VulkanInstance.cpp  VulkanInstance.h
src/cxx/VulkanContext/Vulkan/VulkanLogger/: DefaultVulkanLoggerCallback.h  VulkanLogger.cpp  VulkanLogger.h
src/main/java/com/kgaft/VulkanContext/: Main.java  (+1 more)
submodules/MemoryUtils/: .gitignore  CMakeLists.txt  main.c
submodules/MemoryUtils/src/: global_types.h  memory_stack.c  memory_stack.h  mu_array.c  mu_array.h
(+58 files in other folders)
